<resources>
    <string name="app_name">Blend</string>
    <string name="edit_message">Enter IBM Id</string>
    <string name="edit_message1">Enter Password</string>
    <string name="login">Login</string>

    <string name="action_save">Save</string>
    <string name="action_add">Add</string>

    <string name="input_hint_enter_ibm_id">Enter IBM ID</string>
    <string name="input_hint_enter_password">Enter Password</string>
    <string name="input_hint_search_events">Search for events</string>
    <string name="input_hint_search_ibmers">Search for IBMers</string>
    <string name="input_hint_name">Name</string>
    <string name="input_hint_location">Location</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_phone">Phone</string>
    <string name="input_hint_interests">Interests</string>
    <string name="input_hint_tags">Tags</string>

    <string name="input_hint_event_name">Event Name</string>
    <string name="input_hint_date_time">Date and Time</string>
    <string name="input_hint_event_location">Event Location</string>
    <string name="input_hint_event_type">Event Type</string>
    <string name="input_hint_invitees">Invitees</string>
    <string name="input_hint_open_or_closed">Open or Closed Event</string>
    <string name="input_hint_notes">Notes</string>


    <string name="title_name_placeholder">Name</string>

    <string name="error_incorrect_password">Please enter correct IBM ID</string>
    <string name="error_incorrect_ibm_id">Please enter correct password</string>
    <string name="error_incorrect_ibm_id_and_password">Please enter correct IBM ID and
        password</string>

    <string name="title_event_type_public">Public</string>
    <string name="title_event_type_private">Private</string>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password">Forgot Password</string>

    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_ping">Ping</string>
    <string name="title_rolln">Roll\'n</string>
    <string name="title_create_event">Create Event</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="title_activity_create_events">CreateEventsActivity</string>
</resources>
