<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/activity_content_margin_right"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/button_bar_parent_vertical_padding"
    android:paddingTop="@dimen/button_bar_parent_vertical_padding">
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bar_vertical_spacing"
        android:text="@string/title_profile"
        android:textSize="@dimen/button_bar_text_size" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bar_vertical_spacing"
        android:layout_marginTop="@dimen/button_bar_vertical_spacing"
        android:text="@string/title_events"
        android:textSize="@dimen/button_bar_text_size" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bar_vertical_spacing"
        android:layout_marginTop="@dimen/button_bar_vertical_spacing"
        android:text="@string/title_ping"
        android:textSize="@dimen/button_bar_text_size" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bar_vertical_spacing"
        android:text="@string/title_rolln"
        android:textSize="@dimen/button_bar_text_size" />

</LinearLayout>