<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_createEvent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivian.capstone_test.CreateEventsActivity">

    <include layout="@layout/button_bar" />

    <TextView
        android:id="@+id/title_createEvent"
        style="@style/BlendTheme.PageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/activity_page_heading_margin"
        android:layout_marginTop="@dimen/activity_page_heading_margin"
        android:text="@string/title_create_event" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_createEvent"
        android:layout_marginLeft="@dimen/activity_content_margin_left"
        android:layout_marginRight="@dimen/activity_content_margin_right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_profile_content_horizontal_margin">

                    <EditText
                        android:id="@+id/input_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_hint_event_name"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:id="@+id/input_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_date_time"
                    android:inputType="datetime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:id="@+id/input_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_event_location"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:id="@+id/input_invitees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_invitees"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin"
                android:text="@string/input_hint_event_type" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_public"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_create_event_radio_button_horizontal_spacing"
                    android:text="@string/title_event_type_public" />

                <RadioButton
                    android:id="@+id/radio_button_private"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_create_event_radio_button_horizontal_spacing"
                    android:text="@string/title_event_type_private" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:id="@+id/input_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_tags"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:id="@+id/input_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_notes"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin"
                android:text="@string/action_save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
