<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivian.capstone_test.ProfileActivity">

    <TextView
        android:id="@+id/title_profile"
        style="@style/BlendTheme.PageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/activity_page_heading_margin"
        android:layout_marginTop="@dimen/activity_page_heading_margin"
        android:text="@string/title_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_profile"
        android:layout_marginLeft="@dimen/activity_content_margin_left"
        android:layout_marginRight="@dimen/activity_content_margin_right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_profile_photo"
                    android:layout_width="@dimen/activity_profile_photo_frame_size"
                    android:layout_height="@dimen/activity_profile_photo_frame_size"
                    android:layout_marginRight="@dimen/activity_profile_content_horizontal_margin"
                    android:background="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_profile_content_horizontal_margin">
                    <!--android:paddingBottom="10dp"-->

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_hint_name" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_location" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_phone" />

            </android.support.design.widget.TextInputLayout>

            <view
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin"
                android:background="#000000" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_interests" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_tags" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_profile_content_vertical_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/activity_profile_content_vertical_margin"
                android:text="@string/action_save" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/button_bar" />

</RelativeLayout>
